// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountPopover/> render() should render with value 1`] = `
<div>
  <Button
    className="p-0 focusable"
    color="link"
    disabled={false}
    id="discount-popover"
    innerRef={[Function]}
    onClick={[Function]}
    tabIndex={0}
    tag="button"
    type="button"
  >
    <strong>
      Add discount
    </strong>
  </Button>
  <span
    className="title"
  >
    foo
  </span>
  <Popover
    delay={
      Object {
        "hide": 0,
        "show": 0,
      }
    }
    hideArrow={false}
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="discount-popover"
    toggle={[Function]}
  >
    <Form
      onKeyDown={[Function]}
      onSubmit={[Function]}
      tag="form"
    >
      <PopoverBody
        className="pt-3"
        tag="div"
      >
        <FormGroup
          tag="div"
        >
          <Label
            for="discount-value"
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            Discount this order by
          </Label>
          <InputGroup
            tag="div"
          >
            <InputGroupAddon
              addonType="prepend"
              tag="div"
            >
              <Button
                className="focusable"
                color="secondary"
                onClick={[Function]}
                tabIndex={0}
                tag="button"
              >
                <ShopifyMoneySymbol
                  currencyCode="USD"
                  short={true}
                />
              </Button>
            </InputGroupAddon>
            <InputGroupAddon
              addonType="prepend"
              tag="div"
            >
              <Button
                className="focusable"
                color="secondary"
                onClick={[Function]}
                tabIndex={0}
                tag="button"
              >
                %
              </Button>
            </InputGroupAddon>
            <AmountInput
              className={null}
              currencyCode="USD"
              id="discount-value"
              max={10}
              min={0}
              onChange={[Function]}
              required={true}
              saveInputRef={[Function]}
              symbol={null}
              value="5.99"
            />
          </InputGroup>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <Label
            for="title"
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            Reason
          </Label>
          <Input
            autoComplete="off"
            className="titleInput"
            id="title"
            onChange={[Function]}
            placeholder="Damaged item, loyalty discount"
            type="text"
            value="foo"
          />
        </FormGroup>
      </PopoverBody>
      <hr
        className="m-0"
      />
      <PopoverBody
        className="d-flex"
        tag="div"
      >
        <Button
          className="focusable"
          color="danger"
          onClick={[Function]}
          tabIndex={0}
          tag="button"
          type="button"
        >
          Remove
        </Button>
        <Button
          className="ml-auto focusable"
          color="primary"
          tabIndex={0}
          tag="button"
          type="submit"
        >
          Apply
        </Button>
      </PopoverBody>
    </Form>
  </Popover>
</div>
`;

exports[`<DiscountPopover/> render() should render without value 1`] = `
<div>
  <Button
    className="p-0 focusable"
    color="link"
    disabled={false}
    id="discount-popover"
    innerRef={[Function]}
    onClick={[Function]}
    tabIndex={0}
    tag="button"
    type="button"
  >
    <strong>
      Add discount
    </strong>
  </Button>
  <Popover
    delay={
      Object {
        "hide": 0,
        "show": 0,
      }
    }
    hideArrow={false}
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="discount-popover"
    toggle={[Function]}
  >
    <Form
      onKeyDown={[Function]}
      onSubmit={[Function]}
      tag="form"
    >
      <PopoverBody
        className="pt-3"
        tag="div"
      >
        <FormGroup
          tag="div"
        >
          <Label
            for="discount-value"
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            Discount this order by
          </Label>
          <InputGroup
            tag="div"
          >
            <InputGroupAddon
              addonType="prepend"
              tag="div"
            >
              <Button
                className="focusable"
                color="secondary"
                onClick={[Function]}
                tabIndex={0}
                tag="button"
              >
                <ShopifyMoneySymbol
                  currencyCode="USD"
                  short={true}
                />
              </Button>
            </InputGroupAddon>
            <InputGroupAddon
              addonType="prepend"
              tag="div"
            >
              <Button
                className="focusable"
                color="secondary"
                onClick={[Function]}
                tabIndex={0}
                tag="button"
              >
                %
              </Button>
            </InputGroupAddon>
            <AmountInput
              className={null}
              currencyCode="USD"
              id="discount-value"
              max={10}
              min={0}
              onChange={[Function]}
              required={true}
              saveInputRef={[Function]}
              symbol={null}
              value=""
            />
          </InputGroup>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <Label
            for="title"
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            Reason
          </Label>
          <Input
            autoComplete="off"
            className="titleInput"
            id="title"
            onChange={[Function]}
            placeholder="Damaged item, loyalty discount"
            type="text"
            value=""
          />
        </FormGroup>
      </PopoverBody>
      <hr
        className="m-0"
      />
      <PopoverBody
        className="d-flex"
        tag="div"
      >
        <Button
          className="focusable"
          color="secondary"
          onClick={[Function]}
          tabIndex={0}
          tag="button"
          type="button"
        >
          Close
        </Button>
        <Button
          className="ml-auto focusable"
          color="primary"
          tabIndex={0}
          tag="button"
          type="submit"
        >
          Apply
        </Button>
      </PopoverBody>
    </Form>
  </Popover>
</div>
`;
